--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,51 @@
-#myCanvas {
-    border: 1px solid black;
-    background-color: lightgrey;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+body
+{
+    font-family: 'Orbitron', sans-serif;
+    background: linear-gradient(to bottom, black, #320082);
+    margin: 0;
 }
+h1
+{
+    text-align: center;
+    color: #4B0082;
+    margin: 0;
+}
+
+header
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#heart_container
+{
+    border: #320082;
+    background-color: #aaa;
+    display: flex;
+    justify-content: space-between;
+    padding: 3px;
+}
+
+.heart
+{
+    height: 50px;
+    width: 50px;
+    background-image: url("../assets/images/coeur_plein.png");
+    background-size: contain;
+}
+main
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#myCanvas
+{
+    border: 3px solid #4B0082;
+    background-image: url("/assets/images/fond.jpg");
+}
+
